# torch_tensorRT_binding

./: CMakeLists.txt  README.md  ffi.lua  gie-1.0-0.rockspec  gie.cpp  gie.lua  init.lua  test.lua  test_detectnet.lua
