CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")
SET(CMAKE_CXX_FLAGS "-std=c++11")

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(CUDA)


IF(NOT EXISTS ${GIE_DIR})
  SET(GIE_DIR "$ENV{GIE_DIR}")
ENDIF()
MESSAGE("GIE_DIR: " ${GIE_DIR})

INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/TH" "${GIE_DIR}/include" "${CUDA_INCLUDE_DIRS}")

LINK_DIRECTORIES("${Torch_INSTALL_LIB}" "${GIE_DIR}/lib" "/usr/local/cuda/lib64")
add_definitions(-Wl,-as-needed)

SET(src gie.cpp ${PROTO_SRCS})

FILE(GLOB luasrc *.lua)

ADD_LIBRARY(tgie MODULE ${src})
TARGET_LINK_LIBRARIES(tgie TH nvinfer nvcaffe_parser cudart)

### Torch packages supposes libraries prefix is "lib"
SET_TARGET_PROPERTIES(tgie PROPERTIES
  PREFIX "lib"
  IMPORT_PREFIX "lib")
    
INSTALL(TARGETS tgie
  RUNTIME DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}")

INSTALL(
  FILES
  ${luasrc}
  DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/gie")
